--- a/template/page3.html
+++ b/template/page3.html
@@ -9,7 +9,7 @@
     <li>ページのコードを見る時、わかりやすい。</li>
     <li>サイドを維持すると、なかなか簡単になる</li>
   </ul>
-  <img src="/resources/Cmp.png" width="81%">
+  <img src="resources/Cmp.png" width="81%">
   <p style="margin-top: 3px" class="des">
     ですから、プログラミングを開発する時、コンポーネントを開発単位として、それぞれを作り、最後に組み立てて良い。
   </p>
@@ -21,7 +21,7 @@
       </p>
     </div>
     <div style="padding: 8px">
-      <img src="/resources/cmp2.png" width="99%">
+      <img src="resources/cmp2.png" width="99%">
       <p class="des">
         それぞれのコンポーネントを独立に管理し、開発の時と維持の時も効率が高い。それに、コンポーネントのファイルのタイプは要求がなくて、.html、.txtなども良い。特別なデコーダを設定、配置するのは要らない。ファイルの文法もしくは書き方はHTMLと同じです。
       </p>
