--- a/template/page4.html
+++ b/template/page4.html
@@ -14,7 +14,7 @@
     </li>
   </ul>
   <div style="text-align: center; margin-top: 15px">
-    <img src="/resources/sghs.jpg" width="60%">
+    <img src="resources/sghs.jpg" width="60%">
   </div>
   <div class="modal" id="modal2" ondblclick="ec.fn.showCmpcode2()">
     <img src="/resources/sghs.png" width="100%">
@@ -25,9 +25,9 @@
     </div>
     <div style="text-align: center">
       <h3>コンポーネント表の構造：</h3>
-      <img src="/resources/cmptable.png">
+      <img src="resources/cmptable.png">
       <h3>対するコード</h3>
-      <img src="/resources/cc.png" width="80%">
+      <img src="resources/cc.png" width="80%">
     </div>
   </div>
 </div>
