--- a/template/page1.html
+++ b/template/page1.html
@@ -29,7 +29,7 @@
       </ul>
     </div>
     <div style="width: 20%;float: left">
-      <img src="/resources/RAV.jpg" width="70%">
+      <img src="resources/RAV.jpg" width="70%">
       <div>
         図１
       </div>
