--- a/template/page1.html
+++ b/template/page1.html
@@ -9,21 +9,21 @@
       </p>
       <ul class="des">
         <li style="font-size: 19px;">
-          React：
+          <span style="color: red">React：</span>
           <div>
-            性能は最も高いですが、勉強するのが一番難しい。更に、Reactに対すて必要なツールがいくつある(jsx、Reduxなど)。あまり使用し安くない。
+            性能は最も高いですが、勉強するのが一番<span style="color: blue">難しい</span>。更に、Reactに対すて必要なツールがいくつある(jsx、Reduxなど)。あまり<span style="color: blue">使用し安くない</span>。
           </div>
         </li>
         <li style="font-size: 19px;">
-          Angular:
+          <span style="color: red">Angular:</span>
           <div>
-            必要なツールはReactより少ないですが、フレームだけの大きさも800kbがある。Webページのダウンロードスピードとロードスピードは最も遅い。それに、あまり使わない機能沢山ある。
+            必要なツールはReactより少ないですが、フレームだけの<span style="color: blue">大きさも800kb</span>がある。Webページのダウンロード速度とロード速度は最も<span style="color: blue">遅い</span>。それに、あまり使わない機能沢山ある。
           </div>
         </li>
         <li style="font-size: 19px;">
-          Vue:
+          <span style="color: red">Vue:</span>
           <div>
-            Angularより大きさが小さい。Reactより簡単になる。しかし、Vueのツールが最も少なくて、Vueの資源も少ない(前のフレームと比べたら)
+            Angularより大きさが小さい。Reactより簡単になる。しかし、Vueのツールが最も少なくて、Vueの<span style="color: blue">資源</span>も少ない(前のフレームと比べたら)
           </div>
         </li>
       </ul>
