--- a/template/page2.html
+++ b/template/page2.html
@@ -1,10 +1,10 @@
 <div class="step des" data-x="500" data-y="0" data-scale="0.4">
   <h2>
     研究目的：<br>
-    &nbsp;&nbsp;複雑すぎ、ほとんど使わない機能を捨てる。コンポーネントの理念に基づき、勉強しやすい、使いやすい、軽量級なフレームを研究する。
+    &nbsp;&nbsp;複雑すぎ、ほとんど使わない機能を捨てる。コンポーネント化に基づき、勉強しやすい、使いやすい、軽量級なフレームを研究する。
   </h2>
   <p style="font-size: 22px">
-    本研究では、JavaScriptの知識に基づき、活躍しているVue、React、Angularのようなフレームワークを調査し、これらの使う方法を比べ、整理し、最新なJavaScriptインタフェースで作った。
+    本研究では、<span style="color: red">JavaScript</span>の知識に基づき、活躍している<span style="color: red">Vue、React、Angular</span>のようなフレームワークを調査し、これらの使う方法を比べ、整理し、最新な<span style="color: red">JavaScript</span>インタフェースで作った。
   </p>
   <ul>
     <li id="ookisa" onclick="ec.fn.modal()">大きさは5kbだけ</li>
