--- a/template/page3.html
+++ b/template/page3.html
@@ -1,7 +1,7 @@
 <div class="step" data-x="500" data-y="-400" data-scale="0.4">
   <p style="margin-bottom: 5px;font-size: 22px;" class="des"> 
   Webサイドのコンポーネントとは：<br>
-  &nbsp;&nbsp;Webページの中の内容を一つずつ分け、コンポーネント(component)とする。
+  &nbsp;&nbsp;Webページの中の内容を一つずつ分け、コンポーネント(<span style="color: red">component</span>)とする。
   そうすればいくつ長所がある。
   </p>
   <ul style="margin-bottom: 7px;margin-top: 5px;font-size: 20px" class="des">
@@ -15,15 +15,15 @@
   </p>
   <div class="modal" id="code1" ondblclick="ec.fn.showCmpcode()">
     <div class="des">
-      <img src="/resources/code.png" style="float: left; margin-right: 15px" width="42%">
+      <img src="resources/code.png" style="float: left; margin-right: 15px" width="42%">
       <p>       
-        index.htmlのファイルははっきりになる。開発者が自由にHTMLタグを定義できる。コードを読む場合は覚えやすくて、わかりやすい。
+        <span style="color: red">index.html</span>のファイルははっきりになる。開発者が自由に<span style="color: red">HTMLタグ</span>を定義できる。コードを読む場合は覚えやすくて、わかりやすい。
       </p>
     </div>
     <div style="padding: 8px">
       <img src="resources/cmp2.png" width="99%">
       <p class="des">
-        それぞれのコンポーネントを独立に管理し、開発の時と維持の時も効率が高い。それに、コンポーネントのファイルのタイプは要求がなくて、.html、.txtなども良い。特別なデコーダを設定、配置するのは要らない。ファイルの文法もしくは書き方はHTMLと同じです。
+        それぞれのコンポーネントを独立に管理し、開発の時と維持の時も効率が高い。それに、コンポーネントのファイルのタイプは要求がなくて、<span style="color: red">.html、.txt</span>なども良い。特別なデコーダを設定、配置するのは要らない。ファイルの文法もしくは<span style="color: red">書き方はHTML</span>と同じです。
       </p>
     </div>   
   </div>
