--- a/template/page4.html
+++ b/template/page4.html
@@ -3,21 +3,21 @@
     コンポーネントの実現方法：
   </h2>
   <p class="des" style="font-size: 22px;margin-top: 10px;">
-    最も重要な三つ機能関数：createComponent()、componentIn()、loadCmp()
+    最も重要な三つ機能関数：<span style="color: red">createComponent()</span>、<span style="color: red">componentIn()</span>、<span style="color: red">loadCmp()</span>
   </p>
   <ul　style="font-size: 22px;">
-    <li>createComponent()：タグを登録する機能を持つ。登録したタグをフレームワークのコンポーネント表に入れてコンポーネントになる。実はコンポーネント表を作る。
+    <li><span style="color: red">createComponent()</span>：タグを登録する機能を持つ。登録したタグをフレームワークのコンポーネント表に入れてコンポーネントになる。実はコンポーネント表を作る。
     </li>
-    <li>componentIn()：コンポーネント表のデータを見て、loadCmpを利用し、Webページの中でタグからコンポーネントを作る。原理はHTMLのDOMの操作(生成、削除)、ノードのinnerHTMLとouterHTML関数を用いて、ページに書き込み。
+    <li><span style="color: red">componentIn()</span>：コンポーネント表のデータを見て、loadCmpを利用し、Webページの中でタグからコンポーネントを作る。原理は<span style="color: red">HTMLのDOM</span>の操作(生成、削除)、ノードの<span style="color: red">innerHTMLとouterHTML関数</span>を用いて、ページに書き込み。
     </li>
-    <li>loadCmp()：最新なJsインタフェースfetchを利用し、コンポーネントのファイルから、コンポーネントの文字列データを読み出す
+    <li><span style="color: red">loadCmp()</span>：最新なJsインタフェースfetchを利用し、コンポーネントのファイルから、コンポーネントの文字列データを読み出す
     </li>
   </ul>
   <div style="text-align: center; margin-top: 15px">
     <img src="resources/sghs.jpg" width="60%">
   </div>
   <div class="modal" id="modal2" ondblclick="ec.fn.showCmpcode2()">
-    <img src="/resources/sghs.png" width="100%">
+    <img src="resources/sghs.png" width="100%">
     <div style="padding: 10px">
       <p>
         フレームワークの効率のため、コンポーネントファイルを初めてアクセスする時、読み出したデータをコンポーネント表に保存する。二度ファイルをアクセスする必要がない。
