--- a/template/page2.html
+++ b/template/page2.html
@@ -11,6 +11,8 @@
     <li>コンポーネント化で開発できる</li>
     <li>ルーター機能を持ち、シングルページアプリケーションも作れる</li>
     <li>ファイルのロード順序を決定できる</li>
+    <li>ほかのフレームワークと一緒に使っても良い</li>
+    <li>使いやすいし、簡単だし</li>
   </ul>
 </div>
 <script>
