--- a/template/page1.html
+++ b/template/page1.html
@@ -5,7 +5,7 @@
   <div>
     <div style="width: 79%;float: left">
       <p class="des" style="font-size: 20px;margin-top: 8px">
-        最初、コンポーネントの概念をWebサイドで定義して使うのは<span style="color: red">ExtJS、Dojo</span>フレームワークです。しかし、技術を発展するとともに色々な不足を現す(性能低い、大きさ大きすぎ、不自由)。遂に、次世代フレームワーク<span style="color: red">React.js</span>を代表として、今世界で流行っている。<a href="https://ja.wikipedia.org/wiki/フロントエンド" style="text-decoration: none;color: red">font-end</a>開発技術の現在、コンポーネント化の開発理念は最も重要になる。開発が安くなるし、コードをわかりやすいし、さまざまな長所を持っているが、欠点もある。最も有名なフレームワークを例として：
+        最初、コンポーネントの概念をWebサイドで定義して使うのは<span style="color: red">ExtJS、Dojo</span>フレームワークです。しかし、技術を発展するとともに色々な不足を現す(性能低い、大きさ大きすぎ、不自由)。遂に、次世代フレームワーク<span style="color: red">React.js</span>を代表として、今世界で流行っている。<a href="https://ja.wikipedia.org/wiki/フロントエンド" style="text-decoration: none;color: red">front-end</a>開発技術の現在、コンポーネント化の開発理念は最も重要になる。開発が安くなるし、コードをわかりやすいし、さまざまな長所を持っているが、欠点もある。最も有名なフレームワークを例として：
       </p>
       <ul class="des">
         <li style="font-size: 19px;">
