--- a/template/page3.html
+++ b/template/page3.html
@@ -15,12 +15,12 @@
   </p>
   <div class="modal" id="code1" ondblclick="ec.fn.showCmpcode()">
     <div class="des">
-      <img src="resources/code.png" style="float: left; margin-right: 15px" width="42%">
+      <img src="resources/code.png" style="float: left; margin-right: 15px; margin-left: 10px" width="42%">
       <p>       
         <span style="color: red">index.html</span>のファイルははっきりになる。開発者が自由に<span style="color: red">HTMLタグ</span>を定義できる。コードを読む場合は覚えやすくて、わかりやすい。
       </p>
     </div>
-    <div style="padding: 8px">
+    <div style="padding: 10px">
       <img src="resources/cmp2.png" width="99%">
       <p class="des">
         それぞれのコンポーネントを独立に管理し、開発の時と維持の時も効率が高い。それに、コンポーネントのファイルのタイプは要求がなくて、<span style="color: red">.html、.txt</span>なども良い。特別なデコーダを設定、配置するのは要らない。ファイルの文法もしくは<span style="color: red">書き方はHTML</span>と同じです。
