--- a/template/page7.html
+++ b/template/page7.html
@@ -12,15 +12,21 @@
     </div>
   </div>
   <div class="modal" id="modal4" ondblclick="ec.fn.showCmpcode4()">
-    <div style="margin-top: 30px;">
+    <div style="margin-top: 2px;">
+      <div class="des" style="padding: 30px;">
+        <h3>研究目的：</h3>
+        <p style="font-size: 20px">
+          最急上昇法(最急降下法)の方法を研究し、計算量を減らし、格好な回帰係数（<span style="color: red">重み係数</span>）を探し、分類モデルの波動が減り、該当アルゴリズムを最適化にします。
+        </p>
+      </div>
       <img src="resources/logist.png" width="55%">
       <p>
-        Sigmoid関数の値に基づいて、分類の結果を決定する。
+        <span style="color: red">Sigmoid</span>関数の値に基づいて、分類の結果を決定する。
       </p>
       <hr width="60%">
       <div style="text-align: left;margin: 30px">
         <p style="font-size: 20px">
-          Zの式中W(回帰係数)を計算する事は大切です。最急上昇法と最急降下法を共に用いる「w=w+△error」ここて△errorは正数でも負数でも可能性もある。数の正負に従って、回帰の移動方向を決める。そうすると、最急上昇法と最急降下法を動態的に使って、回帰係数が最良の変化方向へ変わる。
+          Zの式中W(回帰係数)を計算する事は大切です。最急上昇法と最急降下法を共に用いる<span style="color: red; font-size: 24px">「w=w+△error」</span>ここて△errorは正数でも負数でも可能性もある。数の正負に従って、回帰の移動方向を決める。そうすると、最急上昇法と最急降下法を動態的に使って、回帰係数が最良の変化方向へ変わる。
         </p>
       </div>
     </div>
