--- a/template/page8.html
+++ b/template/page8.html
@@ -28,7 +28,7 @@
       </table>
     </div>
     <div>
-      <h3>青い線：BGD、緑の線：SGD、オレンジの線：MSGD</h3>
+      <h3>青い線：BGD、オレンジの線：SGD、緑の線：MSGD</h3>
       <img src="resources/Figure_1.png" width="50%">
       <h4>一回目</h4>
       <img src="resources/Figure_2.png" width="50%">
