--- a/template/page8.html
+++ b/template/page8.html
@@ -15,15 +15,15 @@
       <table style="font-size: 22px;">
         <tr>
           <td>BGD：</td>
-          <td>Batch Gradient Descent）毎回のループをするたびに、全部の訓練データを行列として、大きな行列の計算を行います。</td>
+          <td>（Batch Gradient Descent）毎回のループをするたびに、全部の訓練データを行列として、大きな行列の計算を行います。</td>
         </tr>
         <tr>
           <td>SGD：</td>
-          <td>stochastic gradient descent）毎回のループをするたびに、訓練データの中で、一つをランダムに選んて、使って、トレーニングします。</td>
+          <td>（stochastic gradient descent）毎回のループをするたびに、訓練データの中で、一つをランダムに選んて、使って、トレーニングします。</td>
         </tr>
         <tr>
           <td>MSGD：</td>
-          <td>（Mini-batch SGD）BGDとSGDの特性を組み立てて、毎回のループをするたびに、訓練データの中で、特定な数のデータセットをランダムに選んて、トレーニングします。</td>
+          <td>（Mini-batch SGD）BGDとSGDの特性を組み立てた方法、毎回のループをするたびに、訓練データの中で、特定な数のデータセットをランダムに選んて、トレーニングします。</td>
         </tr>
       </table>
     </div>
