--- a/template/page3.html
+++ b/template/page3.html
@@ -5,13 +5,13 @@
   そうすればいくつ長所がある。
   </p>
   <ul style="margin-bottom: 7px;margin-top: 5px;font-size: 20px" class="des">
-    <li>大きなページを一つずつ小さくし、独立で開発し、Webサイドを作ることのが効率高い</li>
+    <li>大きなページを一つずつ小さくし、独立で開発し、Webサイドを作ることの効率が高い</li>
     <li>ページのコードを見る時、わかりやすい。</li>
     <li>サイドを維持すると、なかなか簡単になる</li>
   </ul>
   <img src="resources/Cmp.png" width="81%">
   <p style="margin-top: 3px" class="des">
-    ですから、プログラミングを開発する時、コンポーネントを開発単位として、それぞれを作り、最後に組み立てて良い。
+    ですから、この開発理念はプログラミングを開発する時、コンポーネントを開発単位として、それぞれを作り、最後に組み立てて、サイドができます。。
   </p>
   <div class="modal" id="code1" ondblclick="ec.fn.showCmpcode()">
     <div class="des">
