--- a/template/page5.html
+++ b/template/page5.html
@@ -1,8 +1,8 @@
 <div class="step" data-x="0" data-y="-400" data-rotate="90" data-scale="0.4">
-  <h2>コンポーネントとルーターを利用すると、シングルページアプリケーションを作りやすいです</h2>
+  <h2>コンポーネントとルーターを利用して、シングルページアプリケーションを作りやすいです</h2>
   <img src="resources/单页.png" width="81%">
   <p class="des" style="font-size: 23px">
-    異なる内容でも、一つWebページにも現せる。新たなWebページをダウンロードするのは必要がありません。そうすると、Webサイドの使用効率とページを現す速さも高くなります。
+    異なる内容でも、一つWebページにも現せる。新たなWebページをダウンロードするのは必要がありません。そうすると、Webサイドのコードの使用効率とページを現す速度も高くなります。
   </p>
   <div class="modal" id="modal3" ondblclick="ec.fn.showCmpcode3()">
     <div style="text-align: center">
