--- a/template/page10.html
+++ b/template/page10.html
@@ -1,4 +1,62 @@
-<div class="step" data-x="100" data-y="-1000" data-scale="0.4">
-  <h1>終わり</h1>
+<div class="step" data-x="-100" data-y="-4200" data-rotate-x="30" data-rotate-y="-60" data-rotate-z="90" data-scale="1">
+  <div class="des" style="height: 250px;">
+    <h2>研究方法：</h2>
+    <p style="font-size: 21px;">
+      モデルは動態なトレーニングが実現するため、初期化する時に計算量を減らすため、トレーニングデータを一つずつランダムに選んでモデルを訓練する(<span style="color: red">stochastic gradient descent，SGD</span>)。それに、トレーニングしている時、回帰係数の激しい波動を減らすため、モデルの初期訓練のループ回数をトレーニングデータの数に基づいて計算する。同時に、ループ回数に基づいて、回帰係数の変化幅の値を計算する。最初に、原始データの量に従って、確率を保証するために、(<span style="color: red">Mini-batch SGD</span>)、もしくは<span style="color: red">BGD(Batch Gradient Descent)</span>でモデルを作る。
+    </p>
+  </div>
+  <div>
+    <img src="resources/Figure_1.png" width="32%">
+    <img src="resources/Figure_2.png" width="32%">
+    <img src="resources/Figure_3.png" width="32%">
+  </div>
+  <div class="modal" id="modal5" ondblclick="ec.fn.showCmpcode5()">
+    <div class="des" style="padding: 10px">
+      <table style="font-size: 22px;">
+        <tr>
+          <td>BGD：</td>
+          <td>（Batch Gradient Descent）毎回のループをするたびに、全部の訓練データを行列として、大きな行列の計算を行います。</td>
+        </tr>
+        <tr>
+          <td>SGD：</td>
+          <td>（stochastic gradient descent）毎回のループをするたびに、訓練データの中で、一つをランダムに選んて、使って、トレーニングします。</td>
+        </tr>
+        <tr>
+          <td>MSGD：</td>
+          <td>（Mini-batch SGD）あきらかにBGDとSGDの特性を組み立てた方法、毎回のループをするたびに、訓練データの中で、特定な数のデータセットをランダムに選んて、トレーニングします。</td>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <h3>青い線：BGD、オレンジの線：SGD、緑の線：MSGD</h3>
+      <img src="resources/Figure_1.png" width="50%">
+      <h4>結果一</h4>
+      <img src="resources/Figure_2.png" width="50%">
+      <h4>結果二</h4>
+      <img src="resources/Figure_3.png" width="50%">
+      <h4>結果三</h4>
+      <div class="des" style="padding: 20px">
+        <p>
+          一般的に：
+        </p>
+        <ul>
+          <li>回帰係数の計算速さ：SGD > MSGD > BGD</li>
+          <li>回帰係数の計算困難程度：BGD > MSGD > SGD</li>
+          <!-- <li>回帰係数の波動性：SGD > MSGD > BGD</li> -->
+          <li>モデルの確率：BGD > MSGD > SGD</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
-<script></script>
+<script>
+var show5 = false
+ec.fn.showCmpcode5 = function(o) {
+  if(!show5) {
+    ec.s('#modal5').style = "opacity:1"
+  } else {
+    ec.s('#modal5').style = "opacity:0"
+  }
+  show5 = !show5
+}
+</script>
