--- a/template/page6.html
+++ b/template/page6.html
@@ -1,10 +1,26 @@
-<div class="step" data-x="-100" data-y="-900" data-rotate-x="60" data-rotate-y="60" data-rotate-z="30" data-scale="0.3">
-  <h1>
-    ···今まで
-  </h1>
-  <hr>
-  <h1>
-    これから···
-  </h1>
+<div class="step" data-x="0" data-y="-400" data-rotate="90" data-scale="0.4">
+  <h2>コンポーネントとルーターを利用して、シングルページアプリケーションを作りやすいです</h2>
+  <img src="resources/单页.png" width="81%">
+  <p class="des" style="font-size: 23px">
+    異なる内容でも、一つWebページにも現せる。新たなWebページをダウンロードするのは必要がありません。そうすると、Webサイドのコードの使用効率とページを現す速度も高くなります。
+  </p>
+  <div class="modal" id="modal3" ondblclick="ec.fn.showCmpcode3()">
+    <div style="text-align: center">
+      <h3>ルータの実現：</h3>
+      <img src="resources/routerCode.png" width="50%">
+      <h3>ルータの使用例：</h3>
+      <img src="resources/routerUse.png">
+    </div>
+  </div>
 </div>
-<script></script>
+<script>
+var show3 = false
+ec.fn.showCmpcode3 = function(o) {
+  if(!show3) {
+    ec.s('#modal3').style = "opacity:1"
+  } else {
+    ec.s('#modal3').style = "opacity:0"
+  }
+  show3 = !show3
+}
+</script>
