--- a/template/page11.html
+++ b/template/page11.html
@@ -2,7 +2,7 @@
   <div class="des">
     <h2>研究方法：</h2>
     <p>
-    しかし、一つのロジスティック回帰モデルは二種類を分けられる(yes or no)けど、0-9の数字を識別する場合は種類が多い。ですから、10個の数字を識別するため、10個のモデルを作って、数字の識別システムができる。識別の確率のため、分類を十回行う。
+    しかし、一つのロジスティック回帰モデルは一つ数字だけ識別できる。ですから、10個の数字を識別するため、10個のモデルを作って、数字の識別システムができる。識別の確率のため、分類を十回行う。
     </p>
   </div>
   <img src="resources/shuzi.png" width="35%" style="margin-right: 15px;">
